[package]
name = "gossip_glomers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.10", features = ["rng", "serde", "v6"] }
